tests/positive/pr118c1_print_string.safe
package pr118c1_print_string

   function log
      print ("hello")
