tests/negative/neg_pr118c2_unit_var.safe
package neg_pr118c2_unit_var

   print ("hello")
   var value : integer = 0
